--- a/codesquadlibrary/src/main/resources/application.properties
+++ b/codesquadlibrary/src/main/resources/application.properties
@@ -1,1 +1,22 @@
-
+#---- Database Setting ----
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3307/codesquadlibrary?autoReconnect=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=tiger
+#---- flyway Setting ----
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
+spring.flyway.baseline-description=default schema
+#---- Log Setting ----
+logging.level.web=DEBUG
+logging.level.com.salda.*=DEBUG
+#---- Spring Data Setting ----
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
+logging.level.sql=DEBUG
+logging.level.type=TRACE
+#---- p6spy ----
+decorator.datasource.p6spy.enable-logging=true
+decorator.datasource.p6spy.log-format=%(currentTime) | took %(executionTime)ms | %(category) | connection %(connectionId)\n%(sql)
