--- a/codesquadlibrary/src/main/resources/application.properties
+++ b/codesquadlibrary/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #---- Database Setting ----
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/codesquadlibrary?autoReconnect=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3307/librarycodesquad?autoReconnect=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=tiger
 #---- flyway Setting ----
